# kdbusaddons

./: .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5DBusAddonsConfig.cmake.in  KF5DBusAddonsMacros.cmake  KF6DBusAddonsConfig.cmake.in  KF6DBusAddonsMacros.cmake  README.md  metainfo.yaml
autotests/: CMakeLists.txt  dbusinterfacetest.cpp  deadservicetest.cpp  kdbusinterprocesslocktest.cpp  kdbuspropertieschangedadaptortest.cpp  kdbusservicetest.cpp  kdbussimpleservice.cpp  pythontest.py  tst_dbusinterfacetest.qml
po/ar/: kdbusaddons5_qt.po
po/ast/: kdbusaddons5_qt.po
po/az/: kdbusaddons5_qt.po
po/bs/: kdbusaddons5_qt.po
po/ca/: kdbusaddons5_qt.po
po/ca@valencia/: kdbusaddons5_qt.po
po/cs/: kdbusaddons5_qt.po
po/da/: kdbusaddons5_qt.po
po/de/: kdbusaddons5_qt.po
po/el/: kdbusaddons5_qt.po
po/en_GB/: kdbusaddons5_qt.po
po/es/: kdbusaddons5_qt.po
po/et/: kdbusaddons5_qt.po
po/eu/: kdbusaddons5_qt.po
po/fi/: kdbusaddons5_qt.po
po/fr/: kdbusaddons5_qt.po
po/gd/: kdbusaddons5_qt.po
po/gl/: kdbusaddons5_qt.po
po/hu/: kdbusaddons5_qt.po
po/ia/: kdbusaddons5_qt.po
po/id/: kdbusaddons5_qt.po
po/it/: kdbusaddons5_qt.po
po/ja/: kdbusaddons5_qt.po
po/ka/: kdbusaddons5_qt.po
po/ko/: kdbusaddons5_qt.po
po/lt/: kdbusaddons5_qt.po
po/ml/: kdbusaddons5_qt.po
po/nb/: kdbusaddons5_qt.po
po/nds/: kdbusaddons5_qt.po
po/nl/: kdbusaddons5_qt.po
po/nn/: kdbusaddons5_qt.po
po/nn/scripts/: kdbusaddons5_qt.po
po/pa/: kdbusaddons5_qt.po
po/pl/: kdbusaddons5_qt.po
po/pt/: kdbusaddons5_qt.po
po/pt_BR/: kdbusaddons5_qt.po
po/ro/: kdbusaddons5_qt.po
po/ru/: kdbusaddons5_qt.po
po/se/: kdbusaddons5_qt.po
po/se/scripts/: kdbusaddons5_qt.po
po/sk/: kdbusaddons5_qt.po
po/sl/: kdbusaddons5_qt.po
po/sr/: kdbusaddons5_qt.po
po/sr@ijekavian/: kdbusaddons5_qt.po
po/sr@ijekavianlatin/: kdbusaddons5_qt.po
po/sr@latin/: kdbusaddons5_qt.po
po/sr@latin/scripts/: kdbusaddons5_qt.po
po/sv/: kdbusaddons5_qt.po
po/tg/: kdbusaddons5_qt.po
po/tr/: kdbusaddons5_qt.po
po/uk/: kdbusaddons5_qt.po
po/x-test/: kdbusaddons5_qt.po
po/zh_CN/: kdbusaddons5_qt.po
po/zh_TW/: kdbusaddons5_qt.po
poqm/ast/: kdbusaddons6_qt.po
poqm/ca/: kdbusaddons5_qt.po  kdbusaddons6_qt.po
poqm/ca@valencia/: kdbusaddons5_qt.po  kdbusaddons6_qt.po
poqm/de/: kdbusaddons5_qt.po  kdbusaddons6_qt.po
poqm/el/: kdbusaddons6_qt.po
poqm/eo/: kdbusaddons5_qt.po  kdbusaddons6_qt.po
poqm/es/: kdbusaddons6_qt.po
poqm/fi/: kdbusaddons5_qt.po
poqm/fr/: kdbusaddons6_qt.po
poqm/ga/: kdbusaddons5_qt.po  kdbusaddons6_qt.po
poqm/he/: kdbusaddons5_qt.po  kdbusaddons6_qt.po
poqm/is/: kdbusaddons5_qt.po
poqm/ja/: kdbusaddons6_qt.po
poqm/nb/: kdbusaddons5_qt.po
poqm/nn/: kdbusaddons5_qt.po
poqm/sa/: kdbusaddons6_qt.po
poqm/se/: kdbusaddons5_qt.po  kdbusaddons6_qt.po
poqm/sv/: kdbusaddons6_qt.po
poqm/tr/: kdbusaddons5_qt.po  kdbusaddons6_qt.po
poqm/ug/: kdbusaddons6_qt.po
poqm/x-test/: kdbusaddons5_qt.po
poqm/zh_CN/: kdbusaddons5_qt.po  kdbusaddons6_qt.po
src/: CMakeLists.txt  Messages.sh  kdbusaddons-index.qdoc  kdbusaddons.qdoc  kdbusaddons.qdocconf  kdbusconnectionpool.cpp  kdbusconnectionpool.h  kdbusinterprocesslock.cpp  kdbusinterprocesslock.h  kdbuspropertieschangedadaptor.cpp  kdbuspropertieschangedadaptor.h  kdbusservice.cpp  kdbusservice.h  kdedmodule.cpp  kdedmodule.h  kdeinit_interface.cpp  kdeinitinterface.cpp  kdeinitinterface.h  kupdatelaunchenvironmentjob.cpp  kupdatelaunchenvironmentjob.h  updatelaunchenvironmentjob.cpp  updatelaunchenvironmentjob.h
src/kdbusxml2qml/: CMakeLists.txt  main.cpp
src/qml/: CMakeLists.txt  dbusinterface.cpp  dbusinterface.h  dbusvariantwrapper.cpp  dbusvariantwrapper.h  kdbuserror.cpp  kdbuserror.h  kjsdbusinterface.cpp  kjsdbusinterface.h  pack.cpp  pack.h  unpack.cpp  unpack.h
src/tools/kdedbus/: CMakeLists.txt  main.cpp
src/tools/kquitapp/: CMakeLists.txt  kquitapp.cpp
tests/: CMakeLists.txt  Systemd.qml  dbuscalltest.cpp  dbusinterfacetest.qml  syncdbusenvtest.cpp
